--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "s4studio/yii2-ajaxcrud-bs5",
+    "name": "s4studio/yii2-ajaxcrud",
     "description": "Gii CRUD template for Single Page Ajax Administration for yii2",
     "type": "yii2-extension",
-    "keywords": ["yii2","extension","ajax","crud","gii","template","database"],
+    "keywords": ["yii2","extension","ajax","crud","gii","template","database","bootstrap","bootstrap4","bootstrap5"],
     "license": "Apache-2.0",
     "authors": [
         {
@@ -17,14 +17,15 @@
         }
     ],
     "support": {
-        "issues": "https://github.com/s4studio/yii2-ajaxcrud-bs5/issues?state=open",
-        "source": "https://github.com/s4studio/yii2-ajaxcrud-bs5"
+        "issues": "https://github.com/s4studio/yii2-ajaxcrud/issues?state=open",
+        "source": "https://github.com/s4studio/yii2-ajaxcrud"
     },
     "require": {
         "yiisoft/yii2": "*",
         "yiisoft/yii2-gii": "*",
+        "yiisoft/yii2-bootstrap4": "*",
         "yiisoft/yii2-bootstrap5": "*",
-	"kartik-v/yii2-grid": "^3.0.4",
+	    "kartik-v/yii2-grid": "^3.0.4",
         "kartik-v/yii2-mpdf": "^1.0.0",
         "kartik-v/yii2-editable": "^1.7.3"
     },
